Overflow issue fixed in textarea in the contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,13 +90,17 @@ body {
 /* ------------------------- Cigar Globe ------------------------- */
 
 div#map {
-    min-height: 360px;
+    min-height: 350px;
     padding: 0;
     margin: 0;
 }
 
 .box-border {
     border: 2px solid black;
+}
+
+.globe-box {
+    text-align: center;
 }
 
 .globe-list {
@@ -109,18 +113,18 @@ ol {
     display: table-cell;
     text-align: center;
     vertical-align: middle;
-    width: 195px;
-    height: 205px;
+    width: 100px;
+    height: 150px;
     margin: 0 auto;
     padding: 25px;
 }
 
 ol #list-2 {
-    padding: 25px;
+    padding: 10px;
 }
 
 ol #list-3 {
-    padding: 25px;
+    padding: 10px;
     overflow: hidden;
 }
 
@@ -241,7 +245,15 @@ ol #list-3 {
     border: solid 1px #1e7e34;
     border-radius: 2px;
 }
-  
+
+textarea {
+    width: 100%;
+    background: white;
+    color: #1e7e34;
+    border: solid 1px #1e7e34;
+    border-radius: 2px;
+}
+
 .text-input:hover {
     border-color: #bbda7b;
 }
